--- a/i18n/zh-CN.toml
+++ b/i18n/zh-CN.toml
@@ -6,19 +6,19 @@
 [recent_posts]
   other = "最新文章"
 [see_more]
-  other = "查看更多"
+  other = "展开信息"
 [learn_more]
-  other = "学到更多"
+  other = "了解更多"
 [attribution]
-  other = "主题: <a href='https://themes.gohugo.io/hugo-future-imperfect-slim/' target='_blank' rel='noopener'>Hugo Future Imperfect Slim</a><br>移植自 <a href='https://html5up.net/future-imperfect' target='_blank' rel='noopener'>HTML5 UP</a> | 由 <a href='https://gohugo.io/' target='_blank' rel='noopener' title='{{ .Site.Hugo.Version }}'>Hugo</a> 驱动"
+  other = "主题: <a href='https://themes.gohugo.io/hugo-future-imperfect-slim/' target='_blank' rel='noopener'>Hugo Future Imperfect Slim</a><br>自 <a href='https://html5up.net/future-imperfect' target='_blank' rel='noopener'>HTML5 UP</a>移植而来 | 由 <a href='https://gohugo.io/' target='_blank' rel='noopener' title='{{ .Site.Hugo.Version }}'>Hugo</a> 生成"
 
 # Sections
 [about]
-  other = "关于"
+  other = "本站信息"
 [contact]
-  other = "联络"
+  other = "联系方式"
 [contact_replies]
-  other = "一般回应需时 {{ .Count }} 小时"
+  other = "通常需 {{ .Count }} 小时回复"
 [blog]
   other = "博客"
 [categories]
@@ -26,54 +26,54 @@
 [tags]
   other = "标签"
 [next_page]
-  other = "下页"
+  other = "后页"
 [previous_page]
-  other = "上页"
+  other = "前页"
 
 # Post
 [reading_time]
   other = "{{ .Count }} 分钟"
 [read_more]
-  other = "阅读全文"
+  other = "展开全文"
 [share_post]
-  other = "分享这篇文章"
+  other = "分享本文"
 [check_out]
-  other = "查看此帖子的作者"
+  other = "推荐阅读"
 [say_something]
-  other = "说些什么"
+  other = "发表高见"
 [comments]
   other = "评论"
 [nothing_yet]
   other = "还沒有留言。"
 [reply]
-  other = "回覆"
+  other = "回复"
 [error_msg]
-  other = "很抱歉，您的提交存在错误。请确保所有必填字段都已填写正确，然后再试一次。"
+  other = "抱歉，提交出错。请于确认所有项目填写无误后重试。"
 [success_msg]
-  other = "感谢您的评论！被批准后它会立即在此站点展示。"
+  other = "感谢评论！评论将于通过审核后显示。"
 
 # Form
 [form_name]
-  other = "你的名字"
+  other = "名称"
 [form_email]
-  other = "你的邮件"
+  other = "邮件"
 [form_website]
-  other = "您的网页"
+  other = "网站"
 [form_subject]
-  other = "你的主题"
+  other = "主题"
 [form_body]
-  other = "你的信息"
+  other = "内容"
 [reset]
-  other = "重设"
+  other = "重置"
 [submitted]
-  other = "已送出"
+  other = "已提交"
 [submit]
-  other = "送出"
+  other = "提交"
 
 # 404
 [404_pagenotfound]
-  other = "找不到页面"
+  other = "页面不存在"
 [404_sorry]
-  other = "抱歉，您正在寻找的页面并不存在。"
+  other = "页面不存在。"
 [404_back]
-  other = "回去"
+  other = "后退"
